Release 210 [2006-09-15]:

* [issue #712] mjb fpga-reload test fails in RHEL 4
* [issue #713] increment and commit rel.num properly in new build scheme
* [issue #714] release notes not showing up on glacier release webpage
	
-----------------------------------------------------------------------------
Release 209 [2006-08-18]:

* [issue #562] rpm build script is broken...
* [issue #626] domterm is using the wrong synchronous signal fd
* [issue #628] domstate script does not handle new dor api
* [issue #648] domterm does not handle signals correctly in linux 2.6
* [issue #648] domterm does not handle signals correctly in linux 2.6 --
* [issue #654] yank out git stuff and fix Copyright->License tag for "make rpm"

-----------------------------------------------------------------------------
Release 208 [2006-07-12]:

* [issue #560] support 104q fw in mjb tests...

-----------------------------------------------------------------------------
Release 207 [2006-05-04]:

* [issue #332] remove dom version check in reldcwd

-----------------------------------------------------------------------------
Release 206 [2006-03-24]:

* [issue #121] a better massacre in mjb-run-test
* [issue #120] fix timeout too short in domstate and configboot scripts

-----------------------------------------------------------------------------
Release 205

* [issue #78] do not exit on in failed opens in domserv

--------------------------------------------
Release 204

* syntax error in reldall fixed
* less debugging in reldall

--------------------------------------------
Release 203

* add reldall and reldcwd
* domserv has better support for my dor driver

--------------------------------------------
Release 202

* domterm now handles POLLERR

--------------------------------------------
Release 201

* set rpm build root correctly

--------------------------------------------
Release 200

* use crossover rather than centroid in tcals
* more baseline info in tcals