@@ -1,3 +1,6 @@
+Next:
+* [issue #1734] move glacier releases page/directory to UW
+	
 Release 210 [2006-09-15]:
 
 * [issue #712] mjb fpga-reload test fails in RHEL 4
